--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p>В целом, занятия показаны для лечения и профилактики артрита, радикулита, бурсита, миозита, остеомиелита, миопатии, остеопороза, артроза, периартрита и тому подобных заболеваний.</p>            
         </div>
         <div class="img">
-            <img src="img/2022-01-29 17.43.45.JPG" width="400" alt="фотография на тренажере">
-            <img src="img/2022-01-29 17.43.30.JPG" width="400" alt="фото на тренажере">
-            <img src="img/2022-01-29 17.43.25.JPG" width="400" alt="фото на тренажере">
+            <img src="img/fhoto1.JPG" width="400" alt="фотография на тренажере">
+            <img src="img/fhoto2.JPG" width="400" alt="фото на тренажере">
+            <img src="img/fhoto3.JPG" width="400" alt="фото на тренажере">
         </div>
         <div class="text2">
             <p>Важно понимать, что «Правило» — это не только тренажер, но и способ тренировки на нем. Условно, можно выделить четыре базовых направления работы на тренажёре, которые существенно помогают вывести физические показатели на качественно новый уровень.</p>
